--- a/backend/core/templates/core/about.html
+++ b/backend/core/templates/core/about.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-    {% load static %}
-<link rel="stylesheet" href="{% static 'core/css/style.css' %}">
-<head>
-    <title>О нас</title>
-</head>
-<body>
-    <h1>О компании Softech</h1>
-</body>
-</html>
+{% extends 'core/base.html' %}
+
+{% block content %}
+<h1> {{title}} </h1>
+<p> Содержимое страницы о сайте
+{% endblock %}
